plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.18'
}

group = 'com.demo.fix.initiator'
version = '0.0.1-SNAPSHOT'

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.quickfixj:quickfixj-core:2.3.0'
	implementation 'org.quickfixj:quickfixj-messages-fix44:2.3.0'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

springBoot {
	mainClass = 'com.demo.fix.initiator.FixInitiatorApplication'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.register('runInitiator', JavaExec) {
	group = 'application'
	description = 'Run the FIX initiator'
	classpath = sourceSets.main.runtimeClasspath
	mainClass = 'com.demo.fix.initiator.FixInitiatorApplication'
}
